--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ app.config.timestamp_*.js
 .env*.local
 
 # Firebase config
-src/lib/firebase/firebase.ts
+src/lib/firebase/client.ts
 
 # dependencies
 /node_modules
