--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@solidjs/router": "^0.15.4",
     "firebase": "^12.7.0",
+    "lucide-solid": "^0.562.0",
     "solid-js": "^1.9.5"
   }
 }
