--- a/src/lib/firebase/client.ts.example
+++ b/src/lib/firebase/client.ts.example
@@ -13,7 +13,7 @@ const firebaseConfig = {
   measurementId: '<YOUR_MEASUREMENT_ID>',
 };
 
-const app = initializeApp();
+const app = initializeApp(firebaseConfig);
 const analytics = getAnalytics(app);
 const firestore = getFirestore(app);
 
