--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
+    "@solid-primitives/scheduled": "^1.5.2",
     "firebase": "^12.7.0",
     "lucide-solid": "^0.562.0",
     "solid-js": "^1.9.5"
