--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@solid-primitives/scheduled": "^1.5.2",
     "firebase": "^12.7.0",
     "lucide-solid": "^0.562.0",
-    "solid-js": "^1.9.5"
+    "solid-js": "^1.9.5",
+    "zod": "^4.3.6"
   }
 }
